Add leading slash to invalid path for consistency

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
                 window.location.replace(pathname.replace("/pyventus", "/pyventus/0.5") + search + hash);
             } else {
                 // If a version is found, redirect to the 404 page of the documentation for that version, including missing path
-                window.location.replace(`/pyventus/${version}/404?path=${encodeURIComponent(pathname.split('/').slice(3).join('/'))}`);
+                window.location.replace(`/pyventus/${version}/404?path=${encodeURIComponent(`/${pathname.split('/').slice(3).join('/')}`)}`);
             }
         })(); // Execute immediately
     </script>
