Fix incorrect path to `versions.json`

--- a/404.html
+++ b/404.html
@@ -32,7 +32,8 @@
                 } else {
                     try {
                         // Fetch the available versions from the JSON file
-                        const response = await fetch("./versions.json");
+                        const response = await fetch("../versions.json");
+                        console.log(response)
 
                         // Check if the response is OK
                         if (!response.ok) {
