Add favicon-link for branding

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting</title>
+  <link rel="icon" href="images/favicon/pyventus-logo.ico">
   <noscript>
     <meta http-equiv="refresh" content="1; url=latest/" />
   </noscript>
