Add meta tag for Google Site Verification

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="-PsQW52aGEpcc5EjyKcxpeGGVT1vk3qJrG1CT_prw9s" />
   <title>Redirecting</title>
   <link rel="icon" href="images/favicon/pyventus-logo.ico">
   <noscript>
